--- a/frappe/www/unsubscribe.html
+++ b/frappe/www/unsubscribe.html
@@ -4,76 +4,82 @@
 
 {% block page_content %}
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-	$(document).ready(function(){
-		$("#select").click(function(){
-			if($("#select").prop("checked") == true){
-				$(".group").prop('checked', true);
-			}
-			else{
-				$(".group").prop('checked', false);
-			}
+	<script>
+		frappe.ready(function(){
+			$("#select").click(function(){
+				if($("#select").prop("checked") == true){
+					$(".group").prop('checked', true);
+				}
+				else{
+					$(".group").prop('checked', false);
+				}
+			});
 		});
-	});
-</script>
-{% if status == "confirmation page" %}
-	<div class="page-card">
-		<div class='page-card-head'>
-			<span class='indicator blue'>Unsubscribe from mailing list</span>
-		</div>
-		<div>
-			Select group to unsubscribe.
-		</div>
-		
-		<form method="post">
-				<input type="hidden" name="user_email" value="{{email}}">
-				<div class="checkbox">
-			<div class="checkbox" style="margin-top: 10px">
-				<label><input type="checkbox" id="select"><span style="padding-left: 20px">Select all</span></label>
+	</script>
+
+	{% if status == "confirmation page" %}
+		<div class="page-card">
+			<div class='page-card-head'>
+				<span class='indicator blue'>Unsubscribe from mailing list</span>
 			</div>
-			<hr style="margin-top: -10px">
-			{% for group in email_groups %}
-			{% if current_group[0].email_group == group.email_group %}
-				<div class="checkbox">
-					<label><input type="checkbox" checked class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+			<div>
+				<b>{{email}}</b> select group to unsubscribe.
+			</div>
+			
+			<form method="post">
+					<input type="hidden" name="user_email" value="{{email}}">
+					<input type="hidden" name="csrf_token" value="{{ frappe.session.csrf_token }}">
+					<div class="checkbox">
+				<div class="checkbox" style="margin-top: 10px">
+					<label><input type="checkbox" id="select"><span style="padding-left: 20px">Select all</span></label>
 				</div>
-			{% else %}
-				<div class="checkbox">
-						<label><input type="checkbox" class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
-				</div>
-			{% endif %}
-			{% endfor %}
-			<p class='password-strength-message text-muted small hidden'></p>
-			<button type="submit" id="unsubscribe"
-				class="btn btn-primary">Unsubscribe</button>
-		</form>
-	</div>
-{% elif status == "Unsubscribed page" %}
-	<div class="page-card">
-		<div class='page-card-head'>
-			<span class='indicator blue'>Unsubscribe from mailing list</span>
+				<hr style="margin-top: 0px">
+				{% for group in email_groups %}
+				{% if current_group[0].email_group == group.email_group %}
+					<div class="checkbox">
+						<label><input type="checkbox" checked class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+					</div>
+				{% else %}
+					<div class="checkbox">
+							<label><input type="checkbox" class="group" name='{{group.email_group}}'><span style="padding-left: 20px">{{group.email_group}}</span></label>
+					</div>
+				{% endif %}
+				{% endfor %}
+				<p class='password-strength-message text-muted small hidden'></p>
+				<center>
+				<button type="submit" id="unsubscribe"
+					class="btn btn-primary">Unsubscribe</button>
+				</center>	
+			</form>
 		</div>
-		You have been unsubscribed from selected mailing list.
-	</div>
-{%else %}
-	<div class="page-card">
-		<div class='page-card-head'>
-			<span class='indicator red'>Unsubscribe from mailing list</span>
+
+	{% elif status == "Unsubscribed page" %}
+		<div class="page-card">
+			<div class='page-card-head'>
+				<span class='indicator blue'>Unsubscribe from mailing list</span>
+			</div>
+			You have been unsubscribed from selected mailing list.
 		</div>
-		<b>Invalid Request.</b>
-	</div>
-{% endif %}
-<style>
-.hero-and-content {
-	background-color: #f5f7fa;
-}
-</style>
+
+	{% else %}
+		<div class="page-card">
+			<div class='page-card-head'>
+				<span class='indicator red'>Unsubscribe from mailing list</span>
+			</div>
+			<b>Invalid Request.</b>
+		</div>
+	{% endif %}
+
+	<style>
+	.hero-and-content {
+		background-color: #f5f7fa;
+	}
+	</style>
 {% endblock %}
 
 {% block style %}
-<style>
-	{% include "templates/styles/card_style.css" %}
-</style>
+	<style>
+		{% include "templates/styles/card_style.css" %}
+	</style>
 {% endblock %}
 
