--- a/frappe/www/me.html
+++ b/frappe/www/me.html
@@ -18,7 +18,7 @@
 					<li><a href="/update-password">
 						<h6 class="text-muted">{{ _("Reset Password") }}</h6>
 					</a></li>
-					<li><a href="/update-profile?name={{ user }}">
+					<li><a href="/update-profile">
 						<h6 class="text-muted">{{ _("Edit Profile") }}</h6>
 					</a></li>
 					<li><a href="/third_party_apps">
